# stochas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  build_mac.sh  build_win.sh  juce-mac-icon.patch  stochas.code-workspace
.github/workflows/: build-pr.yml  build-release.yml
cmake/: versiontools.cmake
image/: Thumbs.db
install/mac/: Stochas Open.pkgproj  Stochas.pkgproj  install.txt  make_dmg.sh
install/win/: install.iss  license.txt  stochas32.iss  stochas64.iss  uninstall.ps1
resources/: Readme.rtf
scripts/: linux-build.sh  mac-build.sh  release-notes.sh  win-build.sh
src/: ChainDialog.cpp  ChainDialog.h  Colors.h  CommonComponents.cpp  CommonComponents.h  Constants.h  EditDialog.cpp  EditDialog.h  EditorState.cpp  EditorState.h  FileDialog.cpp  FileDialog.h  HelpBanner.cpp  HelpBanner.h  HelpText.h  InfoDialog.cpp  InfoDialog.h  MidiDialog.cpp  MidiDialog.h  NotePanel.cpp  NotePanel.h  OptionsPanel.cpp  OptionsPanel.h  Persist.cpp  Persist.h  PlayPanel.cpp  PlayPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Scale.cpp  Scale.h  SeqRandom.cpp  SeqRandom.h  SequenceData.cpp  SequenceData.h  SettingsTab.cpp  SettingsTab.h  StepPanel.cpp  (+8 more)
text/: infobox.txt
